<resources>
    <string name="app_name">Trainer</string>

    <string name="prompt_full_name">Enter your full name</string>
    <string name="prompt_email">Enter your email address</string>
    <string name="prompt_password">Enter a password</string>
    <string name="prompt_confirm_password">Confirm your password</string>

    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="check_box_admin_rights">Admin Rights</string>
    <string name="text_quiz_name">Quiz Name</string>
    <string name="text_question">Question</string>
    <string name="text_option_one">Option One</string>
    <string name="text_option_two">Option Two</string>
    <string name="text_option_three">Option Three</string>
    <string name="text_option_four">Option Four</string>
    <string name="button_add_question">Add Question</string>
    <string name="text_correct_answer">Correct Answer:</string>
    <string name="list_view_text_quiz_name">Quiz Name: %s</string>
    <string name="list_view_text_question">Question: %s</string>
    <string name="list_view_text_option_one">Option One: %s</string>
    <string name="list_view_text_option_two">Option Two: %s</string>
    <string name="list_view_text_option_three">Option Three: %s</string>
    <string name="list_view_text_option_four">Option Four: %s</string>
    <string name="list_view_text_correct_option">Correct Option: %d</string>
    <string name="list_view_text_quiz_result">Result: %.2f%%</string>
    <string name="list_view_text_user_name">Name: %s</string>
    <string name="list_view_text_user_average_result">Average: %.2f%%</string>
    <string name="text_user_average_result">Average: %.2f%%</string>
    <string name="text_current_rank">Current Rank: %d</string>


    <string name="button_add_quiz">Add Quiz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Admin NavigationDrawer -->
    <string name="nav_home">Home</string>
    <string name="nav_quizzes">Quizzes</string>
    <string name="nav_past_quizzes">Past Quizzes</string>
    <string name="nav_help">Help</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_videos">Videos</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="title_activity_admin_home">Admin Home</string>
    <string name="title_activity_quiz_fetcher">New Quizzes</string>
    <string name="title_activity_user_home">User Home</string>
    <string name="title_activity_quiz_manager">Quiz Manager</string>
    <string name="title_activity_past_quiz">Past Quizzes</string>
    <string name="title_activity_user_statistics">Your Statistics</string>
    <string name="title_activity_admin_statistics">AdminStatisticsActivity</string>
    <string name="title_activity_quiz_viewer">QuizViewerActivity</string>
    <string name="text_search_quiz_hint">Type to search...</string>
    <string name="title_activity_user_help">UserHelpActivity</string>
    <string name="title_activity_admin_help">AdminHelpActivity</string>

    <string name="text_admin_statistics">User average results</string>
    <string name="text_past_quizzes">Past Quizzes</string>
    <string name="text_new_quizzes">New Quizzes</string>
    <string name="text_quizzes">Quizzes</string>
    <string name="text_user_statistics">Quizzes taken</string>
    <string name="text_admin_help">As the admin user, you will be able to create quizzes and upload a tutorial video for the quizzes you create (each quiz can only have one video associated with it), as well as view the results of the users that take the quizzes you create. \n\nTo add a Quiz, click on the + button on the Quizzes screen. You can then enter as many questions as you\'d like for the quiz. Each question is multiple choice, and has 4 options. You can choose the correct answer by selecting the appropriate option in the drop down menu. \n\nTo record a video, click on the video record button for the appropriate quiz. You can then record the tutorial video and upload it. Once the video has been uploaded, all the users of the app will be able to download and view it. If you\'d like to replace a video for a quiz, click on the same video recorder icon and repeat the process. The app will then overwrite your previous video. \n\nTo view a video, click on the download button for the appropriate quiz. This will download the video onto your phone. Once downloaded, the download button will change to a play button, which you can then click on to play the video. \n\nTo delete a quiz, click on the delete button for the appropriate quiz. Note: You can\'t update quiz questions once they have been added, as this may cause an unfair comparison between the results of the users. \n\nYou will be able to search for specific quizzes and users by typing into the search bar at the top of the appropriate screen</string>
    <string name="text_user_help">As a user, you will be able to take quizzes that have been set by the admin user, as well as view your results for the quizzes you take. \n\nTo take a quiz, go to the Quizzes page and click on the quiz you would like to take. Each quiz can have one video tutorial for it. To download a video, click on the download button next to the appropriate quiz. If there is a video to download, the app will download it. Once it has been downloaded, the download button will change to a play button, which can then be clicked on to watch the video. If the admin posts a new video that replaces one you have downloaded, you will be told about the new video and the video you had already downloaded will be deleted. \n\nTo retake a quiz, go to the Past Quizzes page and click on a quiz that you would like to retake. This page will also show the marks you received for each test. \n\nIf you would like to see your average mark and your ranking compared to other users, click on the Statistics page. </string>
    <string name="text_questions">Questions</string>
    <string name="label_forgot_password"><u>Forgot Password</u></string>

</resources>