<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_quizzes"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_quizzes" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_theaters_black_24dp"
            android:title="@string/nav_videos" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_sign_out" />
    </group>
</menu>
