<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a15008377.opsc7312_assign2_15008377.QuizSetterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_quiz_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_quiz_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_quiz_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_question"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/button_listen_for_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="listenToSpeechOnClick"
                android:src="@drawable/ic_settings_voice_black_24dp"
                android:background="@drawable/button_rounded"
                android:tint="@color/colorPrimary"
                android:padding="@dimen/button_padding"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_option_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_option_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_option_one"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_option_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_option_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_option_two"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_option_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_option_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_option_three"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_option_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_option_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_option_four"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_correct_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_correct_answer"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <Spinner
                android:id="@+id/spinner_correct_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_correct_answer"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
            </Spinner>

            <Button
                android:id="@+id/button_add_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded"
                android:text="@string/button_add_question"
                android:textColor="@color/colorPrimary"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:onClick="addQuestionOnClick"/>

            <ListView
                android:id="@+id/list_view_quiz_questions"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <Button
                android:id="@+id/button_add_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_primary"
                android:text="@string/button_add_quiz"
                android:textColor="#ffffff"
                android:onClick="addQuizOnClick"
                android:layout_margin="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="@dimen/progress_bar_diameter"
        android:layout_height="@dimen/progress_bar_diameter"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
</RelativeLayout>
