<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a15008377.opsc7312assign1_15008377.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_email_address">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/fab_margin"
                android:hint="@string/prompt_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_password"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:onClick="loginOnClick"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/button_create_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/createAccount"
        android:onClick="createAccountOnClick"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorPrimary"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_diameter"
        android:layout_height="@dimen/progress_bar_diameter"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>
